<resources>
    <string name="app_name">KioskGDJ</string>
    <string name="prompt_username">Username  :</string>
    <string name="prompt_password">Password  :</string>
    <string name="tx_login">Login</string>
    <string name="tx_cus_service">Customer Service</string>
    <string name="action_log_in_short">Login</string>
    <string name="tx_welcome">Welcome to</string>
    <string name="tx_cus">Customer name : </string>
    <string name="tx_default">def</string>
    <string name="tx_usage_confirm">Usage Confirm</string>
    <string name="tx_special_order">Special Order</string>
    <string name="tx_stock_replenishment">Stock Replenishment</string>
    <string name="tx_gdj_vmi_system">GDJ : VMI SYSTEM</string>
    <string name="tx_gdj">GDJ</string>
    <string name="tx_datetime">Datetime :</string>
    <string name="tx_warning">หากพบปัญหาในการใช้งานกรุณาติดต่อเจ้าหน้าที่ โทร +66(0)33 135 018, +66(0)33 135 020 </string>
    <string name="tx_pls_scan">กรุณาสแกน QR Code เพื่อทำการเต็มสินค้า</string>
    <string name="tx_order_set">Order (set)</string>
    <string name="tx_order_component">Order (component)</string>
    <string name="tx_order_emergency_set">Order Emergency (Set)</string>
    <string name="tx_order_emergency_component">Order Emergency (Component)</string>
    <string name="tx_order_usageCon_set">Usage Confirm (Set)</string>
    <string name="tx_order_usageCon_component">Usage Confirm (Component)</string>
    <string name="tx_back">Back</string>
    <string name="tx_part_number">Part Number</string>
    <string name="tx_part_ship">Ship Type</string>
    <string name="tx_snp">SNP :</string>
    <string name="dialog_confrimOrderEN">Are you sure you need the box?</string>
    <string name="dialog_confrimOrderETH">(คุณแน่ใจหรือว่าต้องการกล่อง)</string>
    <string name="tx_yes">YES</string>
    <string name="tx_no">NO</string>
    <string name="tx_part_component">Part Component</string>
    <string name="tx_usage">Usage</string>
    <string name="tx_packing_snp">Packing SNP</string>
    <string name="tx_qty">Qty</string>
    <string name="tx_picker">Picker</string>
    <string name="tx_tit_qty">Quantity</string>
    <string name="tx_cotton">"Carton code"</string>
    <string name="tx_part_num">"Part number"</string>
    <string name="tx_packing">Packing</string>
    <string name="tx_alertTH">(ไม่มีการกำหนดจำนวนในบางรายการ คุณต้องการดำเนินการสั่งสินค้าต่อหรือไม่)</string>
    <string name="tx_alertEN">Some part number is don\'t have a quantity. \n Are you sure you need this order?</string>
    <string name="tx_alertSetTH">(กรุณากรอกข้อมูลให้ครบทุกช่อง)</string>
    <string name="tx_alertSetEN">Please fill up this form</string>
    <string name="tx_alertComEmerTH">(กรุณาทำรายการ)</string>
    <string name="tx_alertComEmerEN">Please select list</string>
    <string name="tx_close">Close</string>
    <string name="tx_date_of_delivery">"Date of delivery "</string>
    <string name="tx_order_reference">Order reference</string>
    <string name="tx_vmi_stock">Stock</string>
    <string name="tx_pic">Pic</string>
    <string name="tx_pack">Pack</string>
    <string name="tx_replenishment_list">Replenishment List</string>
    <string name="tx_fg_code">FG Code GDJ</string>
    <string name="tx_part_cus">Part Customer</string>
    <string name="tx_qty_pcs">Quantity \n (Pcs.)</string>
    <string name="tx_home">Home</string>
    <string name="tx_part_number_list">" Part Number List"</string>
    <string name="tx_confirm">confirm</string>
    <string name="tx_no_caps">No</string>
    <string name="tx_qc_check">QC Check</string>
    <string name="tx_explain">Explain</string>
    <string name="tx_accept">Accept</string>
    <string name="tx_pls_scan_qr">กรุณาสแกน QR Code</string>
    <string name="tx_component">Component</string>
    <string name="tx_del_en">Are you sure you want to delete</string>
    <string name="tx_del_th">(คุณต้องการลบข้อมูลทั้งหมดหรือไม่)</string>
    <string name="tx_no_data_en">Please select order</string>
    <string name="tx_no_data_th">(กรุณาทำรายการ)</string>
    <string name="tx_log_th">(Username หรือ Password ไม่ถูกต้อง กรุณาลองใหม่อีกครั้ง)</string>
    <string name="tx_log_en">Username or Password incurred. please try again</string>
    <string name="tx_vmi_system">VMI SYSTEM</string>
    <string name="tx_tit_snp">SNP</string>
</resources>