<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="650dp"
    android:layout_height="wrap_content"
    android:paddingBottom="40dp"
    android:background="@color/color_gray_light"
    >

    <Button
        android:id="@+id/al_log_bt_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@android:color/holo_red_dark"
        android:foreground="@drawable/ic_close" />

    <TextView
        style="@style/styleTitle_20Bold"
        android:id="@+id/al_log_tv_detailEN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_log_en"
        android:layout_below="@id/al_log_bt_close"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>

    <TextView
        style="@style/styleTitle_20Normal"
        android:id="@+id/al_log_tv_detailTH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/al_log_tv_detailEN"
        android:text="@string/tx_log_th"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"/>
        <Button
            style="@style/styleTitle_20Normal"
            android:id="@+id/al_log_bt_acc"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:layout_below="@id/al_log_tv_detailTH"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:text="@string/tx_accept"/>


</RelativeLayout>